{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 27,
  "lineage": "c1fc0acd-050f-c423-728b-6ad19ad40963",
  "resources": [
    {
      "module": "module.ec2-jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a93a08544874b3b7",
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:instance/i-049bd3d664e43170a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049bd3d664e43170a",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aed49f616e5f5555",
            "private_dns": "ip-10-20-1-24.ap-northeast-2.compute.internal",
            "private_ip": "10.20.1.24",
            "public_dns": "ec2-3-36-122-209.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.122.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 120,
                "throughput": 0,
                "volume_id": "vol-059b14c6306e5d3a8",
                "volume_size": 40,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ead85994eb9a7059",
            "tags": {
              "Name": "devops-dev-jenkins-1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "devops-dev-jenkins-1"
            },
            "vpc_security_group_ids": [
              "sg-09fa20f5bda3863aa"
            ]
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-tomcat",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a93a08544874b3b7",
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:instance/i-00336db6280e178fb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00336db6280e178fb",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "tomcat-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e4a165c0d747cd15",
            "private_dns": "ip-10-20-1-95.ap-northeast-2.compute.internal",
            "private_ip": "10.20.1.95",
            "public_dns": "ec2-3-35-139-119.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.139.119",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b37099f96e2aab60",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ead85994eb9a7059",
            "tags": {
              "Name": "devops-dev-tomcat-1"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "devops-dev-tomcat-1"
            },
            "vpc_security_group_ids": [
              "sg-09fa20f5bda3863aa"
            ]
          },
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05887d2d9f1142d45",
            "domain": "vpc",
            "id": "eipalloc-070456219c1ce1192",
            "instance": "i-049bd3d664e43170a",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0aed49f616e5f5555",
            "private_dns": "ip-10-20-1-24.ap-northeast-2.compute.internal",
            "private_ip": "10.20.1.24",
            "public_dns": "ec2-3-34-24-30.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.24.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2-jenkins.aws_instance.this",
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.sg1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:security-group/sg-09fa20f5bda3863aa",
            "description": "Jenkins group managed by Terraform",
            "egress": [],
            "id": "sg-09fa20f5bda3863aa",
            "ingress": [],
            "name": "Jenkins",
            "name_prefix": "",
            "owner_id": "199130073692",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-dev-jenkins",
              "Namespace": "devops",
              "Stage": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-026863c49b680d173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All egress traffic",
            "from_port": 0,
            "id": "sgrule-3963116186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09fa20f5bda3863aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1906419792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09fa20f5bda3863aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3341546981",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09fa20f5bda3863aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1224582371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09fa20f5bda3863aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.tomcat-eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09c6afd55e89e880e",
            "domain": "vpc",
            "id": "eipalloc-03f492ed4e95bdf00",
            "instance": "i-00336db6280e178fb",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0e4a165c0d747cd15",
            "private_dns": "ip-10-20-1-95.ap-northeast-2.compute.internal",
            "private_ip": "10.20.1.95",
            "public_dns": "ec2-15-165-118-112.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.118.112",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tomcat"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2-tomcat.aws_instance.this",
            "module.sg1.aws_security_group.default",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0128efc0d535f8dd1",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-163-121.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.163.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "devops-cicd-eip-nat-gateway-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:internet-gateway/igw-0ac44ac0c44795354",
            "id": "igw-0ac44ac0c44795354",
            "owner_id": "199130073692",
            "tags": {
              "Name": "devops-cicd-igw"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0128efc0d535f8dd1",
            "id": "nat-050a3dfa702bec9de",
            "network_interface_id": "eni-0624a9e15ec883c48",
            "private_ip": "10.20.1.175",
            "public_ip": "52.78.163.121",
            "subnet_id": "subnet-0ead85994eb9a7059",
            "tags": {
              "Name": "devops-cicd-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-008276ed8166a061b",
            "owner_id": "199130073692",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050a3dfa702bec9de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cicd-private-routes-1"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b39f5c4415eeb2a0",
            "owner_id": "199130073692",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-050a3dfa702bec9de",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cicd-private-routes-2"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00d2a54e3b300f59c",
            "owner_id": "199130073692",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac44ac0c44795354",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cicd-public-routes"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d10916d06813a33",
            "route_table_id": "rtb-008276ed8166a061b",
            "subnet_id": "subnet-047faba51facc1e99"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee7789a52304db3c",
            "route_table_id": "rtb-0b39f5c4415eeb2a0",
            "subnet_id": "subnet-0382a99b8c352f748"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a175aa1db041a7c5",
            "route_table_id": "rtb-00d2a54e3b300f59c",
            "subnet_id": "subnet-0ead85994eb9a7059"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d118051586fc1f45",
            "route_table_id": "rtb-00d2a54e3b300f59c",
            "subnet_id": "subnet-03c24f031cb7382c5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:subnet/subnet-047faba51facc1e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.20.4.0/24",
            "id": "subnet-047faba51facc1e99",
            "map_public_ip_on_launch": false,
            "owner_id": "199130073692",
            "tags": {
              "Name": "devops-cicd-private-subnets-1"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:subnet/subnet-0382a99b8c352f748",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.20.5.0/24",
            "id": "subnet-0382a99b8c352f748",
            "map_public_ip_on_launch": false,
            "owner_id": "199130073692",
            "tags": {
              "Name": "devops-cicd-private-subnets-2"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:subnet/subnet-0ead85994eb9a7059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-0ead85994eb9a7059",
            "map_public_ip_on_launch": true,
            "owner_id": "199130073692",
            "tags": {
              "Name": "devops-cicd-public-subnets-1"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:subnet/subnet-03c24f031cb7382c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-03c24f031cb7382c5",
            "map_public_ip_on_launch": true,
            "owner_id": "199130073692",
            "tags": {
              "Name": "devops-cicd-public-subnets-2"
            },
            "vpc_id": "vpc-026863c49b680d173"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:199130073692:vpc/vpc-026863c49b680d173",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0885b4e2a049856f9",
            "default_route_table_id": "rtb-0adaa8d301d3cb863",
            "default_security_group_id": "sg-056d897f406e52b09",
            "dhcp_options_id": "dopt-347fd05f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-026863c49b680d173",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0adaa8d301d3cb863",
            "owner_id": "199130073692",
            "tags": {
              "Location": "Virginia",
              "Name": "devops-cicd-vpc",
              "Namespace": "devops",
              "Stage": "cicd"
            }
          }
        }
      ]
    }
  ]
}